--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: sans-serif;
+  background-color:white;
 }
 .navbar {
   display: flex;
